# sp-variant

./: .editorconfig  .gitignore  .shellcheckrc  Cargo.toml  MANIFEST.in  Makefile  NEWS.md  README.md  clippy.toml  mkdocs.yml  pyproject.toml  ruff-base.toml  run-clippy.sh  setup-build-repo.cfg  setup.cfg  setup.py  sp_variant.sh  sp_variant.sh.j2  tox.ini
.cargo/: config.toml
.reuse/: dep5
data/common/scripts/: add-storpool-repo.sh  install-packages.sh.j2  storpool_variant.sh
data/debian/repo/: storpool-keyring.gpg  storpool.sources
data/redhat/repo/: RPM-GPG-KEY-StorPool  storpool-centos.repo
docs/: api.md  changes.md  index.md
examples/: build-repo-overrides.toml
nix/: cleanpy.sh  python-tox.nix  python-vetox.nix  reformat.sh  run-basic-tests.sh  run-tox.sh  run-vetox.sh  rust-cargo.nix  tox-regen.nix
python/config/ruff-all/: pyproject.toml
python/config/ruff-base/: pyproject.toml
python/config/ruff-most/: pyproject.toml
python/contrib/sp/util/file/: temp.py
python/requirements/: black.txt  docs.txt  ruff.txt  test-mypy.txt  test-tox-stages.txt  test-unit.txt  tools.txt
python/sp/util/: backports.py
python/sp/util/file/: temp.py
python/sp_build_repo/: __init__.py  __main__.py  diag.py  subst.py
python/sp_variant/: __init__.py  __main__.py  defs.py  repo.py  variant.py  vbuild.py  yaiparser.py
python/stubs/: pytest.pyi
python/test_docker/: __init__.py  __main__.py
python/tests/: vetox.py
python/unit_tests/: __init__.py  test_subst.py  test_variant.py  test_yaiparser.py  util.py
python/unit_tests_3/: test_subst.py
rust/: bin.rs  data.rs  data.rs.j2  lib.rs  tests.rs  variants-all.json  yai.rs
