# SPDX-FileCopyrightText: 2021 - 2023  StorPool <support@storpool.com>
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "sp-variant"
version = "3.2.1"
edition = "2021"
rust-version = "1.58"
authors = ["StorPool <support@storpool.com>"]
description = " Detect the Linux distribution for the StorPool build system"
readme = "README.md"
homepage = "https://github.com/storpool/sp-variant"
repository = "https://github.com/storpool/sp-variant.git"
license = "BSD-2-Clause"
categories = ["command-line-utilities", "config"]

[lib]
path = "rust/lib.rs"

[[bin]]
name = "storpool_variant"
path = "rust/bin/main.rs"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4", features = ["derive"] }
enum-iterator = "1.4.0"
nix = ">= 0.22"
once_cell = "1.17.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1.0.38"
