# SPDX-FileCopyrightText: 2021 - 2024  StorPool <support@storpool.com>
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "sp-variant"
version = "3.4.2"
edition = "2021"
rust-version = "1.64"
authors = ["StorPool <support@storpool.com>"]
description = " Detect the Linux distribution for the StorPool build system"
readme = "README.md"
homepage = "https://github.com/storpool/sp-variant"
repository = "https://github.com/storpool/sp-variant.git"
license = "BSD-2-Clause"
categories = ["command-line-utilities", "config"]

[lib]
path = "rust/lib.rs"

[[bin]]
name = "storpool_variant"
path = "rust/bin/main.rs"

[dependencies]
anyhow = "1.0.69"
clap = "4"
clap_derive = "4"
enum-iterator = "1.4.0"
nix = { version = ">= 0.22", features = ["fs", "user"] }
once_cell = "1.17.0"
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
tempfile = "3"
thiserror = "1.0.38"
