[metadata]
name = sp-variant
version = attr: sp_variant.defs.VERSION
description = Detect the Linux distribution for the StorPool build system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/storpool/sp-variant
author = StorPool
author_email = support@storpool.com
license = BSD-2
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: DFSG approved
    License :: Freely Distributable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
package_dir =
    =python
packages =
    sp_variant
setup_requires =
install_requires =
    typing; python_version < "3.6"
python_requires = >= 2.7, != 3.0, != 3.1, != 3.2, != 3.3, != 3.4

[options.entry_points]
console_scripts =
    sp_variant = sp_variant.__main__:main

[options.package_data]
sp_variant =
  py.typed

[bdist_wheel]
universal = True

[flake8]
max_line_length = 100
